Commit everything in main hehe